[package]
name = "cratedb"
version = "0.1.2"
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
description = "CrateDB driver for Rust."
repository = "https://github.com/celaus/rust-cratedb"
keywords = ["cratedb", "database", "sql", "crate"]
license = "Apache-2.0"

[dependencies]
serde = "^0.9.6"
serde_derive = "^0.9.6"
serde_json = "^0.9.6"
hyper = "^0.10.4"
rand = "^0.3"
