[package]
name = "cratedb"
version = "1.0.0"
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
description = "CrateDB driver for Rust."
repository = "https://github.com/celaus/rust-cratedb"
keywords = ["cratedb", "database", "sql", "crate", "blob"]
license = "Apache-2.0"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
hyper = "^0.10.9"
hyper-rustls = "^0.6"
rand = "^0.3"
ring = "^0.9"
